Create and inject fetch setting config;