@@ -1,9 +1,6 @@
 package com.icthh.xm.commons.config.client.api;
 
 import com.icthh.xm.commons.config.domain.Configuration;
-import jakarta.annotation.PostConstruct;
-import java.util.Arrays;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 
 import java.util.ArrayList;
@@ -11,32 +8,18 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.util.AntPathMatcher;
 
 @Slf4j
 public abstract class AbstractConfigService implements ConfigService {
 
     private final List<ConfigurationChangedListener> configurationListeners = new ArrayList<>();
-    private final AntPathMatcher antPathMatcher = new AntPathMatcher();
+    private final AntPathMatcher antPathMatcher;
+    private final FetchConfigurationSettings fetchConfigurationSettings;
 
-    @Value("${application.config-fetch-all.enabled:true}")
-    private boolean isFetchAll;
-
-    @Value("${spring.application.name}")
-    private String applicationName;
-
-    public static List<String> CONFIG_ANT_PATTERN_PATHS;
-
-    @PostConstruct
-    public void init() {
-        CONFIG_ANT_PATTERN_PATHS = List.of(
-                "/config/tenants/commons/**",
-                "/config/tenants/*",
-                "/config/tenants/{tenantName}/commons/**",
-                "/config/tenants/{tenantName}/*",
-                "/config/tenants/{tenantName}/" + applicationName + "/**",
-                "/config/tenants/{tenantName}/config/**");
+    protected AbstractConfigService(FetchConfigurationSettings fetchConfigurationSettings) {
+        this.antPathMatcher = new AntPathMatcher();
+        this.fetchConfigurationSettings = fetchConfigurationSettings;
     }
 
     @Override
@@ -77,13 +60,13 @@ public abstract class AbstractConfigService implements ConfigService {
     }
 
     private Collection<String> getFilteredPaths(Collection<String> paths) {
-        if (isFetchAll) {
+        if (fetchConfigurationSettings.getIsFetchAll()) {
             return paths;
         }
 
         return paths.stream()
-                .filter(path -> matchPath(path, CONFIG_ANT_PATTERN_PATHS))
-                .collect(Collectors.toList());
+                .filter(path -> matchPath(path, fetchConfigurationSettings.getMsConfigPatterns()))
+                .toList();
     }
 
     private boolean matchPath(String path, List<String> pathsAntPattern) {
